--- a/src/styles/components/sidebar.sass
+++ b/src/styles/components/sidebar.sass
@@ -14,10 +14,16 @@
     padding: 3rem 0
 
     img
-        max-width: 35%
+        width: 30%
         border-radius: variables.$container-border-radius
         position: absolute
-        top: -3rem
+        top: -7rem
+        transition: all 0.4s ease-in-out
+
+    &:hover
+        img
+            transform: scale(1.1)
+            transition: all 0.4s ease-in-out
 
     .title
         color: variables.$text-color-secondary
