--- a/src/styles/components/app.sass
+++ b/src/styles/components/app.sass
@@ -8,8 +8,9 @@
 
     h1
         width: 100%
-        font-size: 5rem
-        margin-bottom: 4rem 
+        font-size: 3rem
+        margin-bottom: 5rem 
+        margin-left: 5rem
         background: variables.$gradient
         -webkit-background-clip: text
         -webkit-text-fill-color: transparent
